fix(layout): corrected centering and alignmnet across sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -211,6 +211,8 @@ body.menu-open {
 .hero {
     display: flex;
     justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .intro {
@@ -297,6 +299,7 @@ footer {
 
 footer address p, footer address p a {
     font-size: clamp(1rem, calc(0.9545rem + 0.2273vw), 1.166rem);
+    justify-self: center;
 }
 
 /* Responsive */
@@ -324,8 +327,14 @@ footer address p, footer address p a {
     }
 
     .nav-container {
-        justify-content: space-between;
-        align-items: flex-start;
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
+        align-items: start;
+    }
+
+    .logo {
+        grid-column: 2;
+        justify-self: center;
     }
 
     .toggle-menu-container {
@@ -334,6 +343,8 @@ footer address p, footer address p a {
 
     .nav-list {
         display: block;
+        grid-column: 3;
+        justify-self: end;
     }
 
     .nav-list ul {
